--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.1"
+    "typescript": "~3.1.1",
+    "node-sass": "^4.13.0"
   }
 }
