--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@angular/router": "^7.0.1",
     "core-js": "^2.5.7",
     "rxjs": "^6.3.3",
+    "yaml": "^1.7.2",
     "zone.js": "^0.8.26"
   },
   "scripts": {
