--- a/src/assets/data/project.yml
+++ b/src/assets/data/project.yml
@@ -12,9 +12,18 @@ instances:
             text : "My description in scalar"
     
     token_1:
-        position: {x: 100, y: 100}
+        position: {x: 300, y: 100}
         type: Token
         inputs:
             symbol : "X"
             name : "name"
             description : { source: scalar_string_1, output: self }
+
+    list_1:
+        position:  {x: 600, y: 100}
+        type: List
+        inputs:
+            content:
+                - {source: token_1, output: self }
+                - {source: token_1, output: self }
+                - {source: token_1, output: self }
