wip: template definition

--- a/src/assets/data/project.yml
+++ b/src/assets/data/project.yml
@@ -4,7 +4,10 @@ imports:
     protogames : "protogame.yml"
 
 instances:
-    
+    #group_01:
+    #    position: {x: 200, y: 200}
+    #    type: templates(my_group_01)
+
     scalar_string_1:
         position: {x: 10,  y: 10}
         type: String        
