--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "angular",
   "version": "0.0.0",
+  "main": "main.js",
   "private": true,
   "dependencies": {
     "@angular/common": "^8.2.14",
@@ -10,7 +11,9 @@
     "@angular/platform-browser": "^8.2.14",
     "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/router": "^8.2.14",
+    "@types/electron": "^1.6.10",
     "core-js": "^3.6.0",
+    "ngx-electron": "^2.2.0",
     "rxjs": "^6.3.3",
     "tslib": "^1.10.0",
     "yaml": "^1.7.2",
@@ -22,17 +25,19 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "start:electron": "electron ."
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.21",
     "@angular/cli": "~8.3.21",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
-    "@types/node": "~12.12.21",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~12.12.21",
     "codelyzer": "^5.0.1",
+    "electron": "^7.1.7",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.4.1",
@@ -40,10 +45,10 @@
     "karma-coverage-istanbul-reporter": "~2.1.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
+    "node-sass": "^4.13.0",
     "protractor": "~5.4.0",
     "ts-node": "~8.5.4",
     "tslint": "~5.20.1",
-    "typescript": "<3.6.0",
-    "node-sass": "^4.13.0"
+    "typescript": "<3.6.0"
   }
 }
