--- a/samples/py-protogame/multi-workspace.yml
+++ b/samples/py-protogame/multi-workspace.yml
@@ -1,6 +1,7 @@
 imports: 
     scalars : "scalars.yml"
     protogames : "protogame.yml"
+    exportpy : "export-python.yml"
     
 blueprints:
     my_group_01:
