--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/router": "^8.2.14",
     "@types/electron": "^1.6.10",
+    "@types/nunjucks": "^3.1.3",
     "core-js": "^3.6.0",
     "electron-updater": "^4.2.0",
     "ngx-electron": "^2.2.0",
+    "nunjucks": "^3.2.0",
     "rxjs": "^6.3.3",
     "tslib": "^1.10.0",
     "yaml": "^1.7.2",
