--- a/components/blueprint-core/package.json
+++ b/components/blueprint-core/package.json
@@ -10,9 +10,11 @@
   "keywords": [],
   "author": "Marc Gardent",
   "license": "MIT",
-  "nunjucks": "^3.2.0",
   "devDependencies": {
+    "@types/nunjucks": "^3.1.3",
     "typescript": "<3.6.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "nunjucks": "^3.2.0"
+  }
 }
