--- a/components/blueprint-core/package.json
+++ b/components/blueprint-core/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/nunjucks": "^3.1.3",
+    "create-ts-index": "^1.12.0",
     "typescript": "<3.6.0"
   },
   "dependencies": {
