--- a/components/blueprint-editor/package.json
+++ b/components/blueprint-editor/package.json
@@ -24,7 +24,8 @@
     "rxjs": "^6.3.3",
     "tslib": "^1.10.0",
     "yaml": "^1.7.2",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "blueprint-core": "file://../blueprint-core"
   },
   "scripts": {
     "ng": "ng",
