--- a/components/blueprint-editor/package.json
+++ b/components/blueprint-editor/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blueprint",
+  "name": "blueprint-editor",
   "description": "node editor, code is data, data is code",
   "author": {
     "name": "Marc Gardent"
