--- a/components/blueprint-core/package.json
+++ b/components/blueprint-core/package.json
@@ -5,14 +5,17 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "test": "ts-node node_modules/jasmine/bin/jasmine ./**/*.spec.ts"
   },
   "keywords": [],
   "author": "Marc Gardent",
   "license": "MIT",
   "devDependencies": {
+    "@types/jasmine": "^3.5.3",
     "@types/nunjucks": "^3.1.3",
-    "create-ts-index": "^1.12.0",
+    "jasmine": "^3.5.0",
+    "ts-node": "^8.6.2",
     "typescript": "<3.6.0"
   },
   "dependencies": {
