--- a/samples/py-protogame/protogame.yml
+++ b/samples/py-protogame/protogame.yml
@@ -1,7 +1,7 @@
 
 # Use case for blueprint project
 
-definitions:
+definitions: # <-- todo rename ressource!
 
     #########################
     Token:
